fix form position on mobile and tablet

--- a/app/catalog/[id]/CarDetailsPage.module.css
+++ b/app/catalog/[id]/CarDetailsPage.module.css
@@ -8,7 +8,7 @@
 }
 
 .leftSide {
-  width: 100%;
+  display: contents;
 }
 
 .imageWrapper {
@@ -18,8 +18,8 @@
   background-color: #f3f3f3;
   overflow: hidden;
   position: relative;
-  margin-bottom: 24px;
   border-radius: 19px;
+  order: 1;
 }
 
 .image {
@@ -30,14 +30,19 @@
   display: block;
 }
 
+.detailInfoWrapper {
+  order: 2;
+}
+
+.rentFormWrapper {
+  order: 3;
+  width: 100%;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     padding: 64px 32px 80px;
     gap: 50px;
-  }
-
-  .imageWrapper {
-    margin-bottom: 32px;
   }
 }
 
@@ -46,16 +51,31 @@
     max-width: 1200px;
     padding: 84px 0 104px;
     flex-direction: row;
+    display: flex;
     gap: 72px;
   }
 
   .leftSide {
+    display: flex;
+    flex-direction: column;
     width: 640px;
+    order: 1;
   }
 
   .imageWrapper {
     width: 640px;
     height: 512px;
     margin-bottom: 40px;
+    order: unset;
+  }
+
+  .rentFormWrapper {
+    order: unset;
+    width: 100%;
+  }
+
+  .detailInfoWrapper {
+    order: 2;
+    flex: 1;
   }
 }
